--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
+  background-image: url(./images/background.jpg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.welcomeScreen {
+  height: 80%;
+  width: 60%;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.welcomeScreen__name {
+  height: 100px;
+  width: 300px;
+  margin-left: -68px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.welcomeScreen__name svg {
+  height: 400px;
+}
+
+path {
+  fill: transparent;
+}
+
+text {
+  fill: rgb(255, 255, 255);
+  font-size: 72px;
+  text-shadow: -3px 6px 2px #3263e9;
+}
+
+.logo {
+  background-image: url(./images/quiz-on-computer-with-question-signs-around.png);
+  height: 200px;
+  width: 200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -130px;
+}
+
+.welcomeScreen__button {
+  height: 50px;
+  width: 250px;
+  font-size: 25px;
+  background-color: transparent;
 }
