--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,11 @@
 }
 
 .welcomeScreen {
-  height: 100%;
+  height: 85%;
   width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -54,6 +54,11 @@ text {
   margin-top: -15px;
 }
 
+.categoryPick {
+  margin: -40px 0 -40px 0;
+  font-size: 30px;
+}
+
 .welcomeScreen__chooseMenu {
   display: flex;
   justify-content: space-evenly;
@@ -66,23 +71,49 @@ text {
 .welcomeScreen__chooseMenu__button {
   height: 50px;
   width: 110px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(236, 232, 232);
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.welcomeScreen__chooseMenu__button:hover {
+  background-color: rgba(3, 83, 3, 0.76);
+  color: rgb(0, 0, 0);
+}
+
+.welcomeScreen__chooseMenu__button--checked{
+  background-color: rgb(12, 129, 12);
+  color: rgb(255, 255, 255);
 }
 
 .welcomeScreen__button {
   height: 50px;
   width: 250px;
   font-size: 25px;
-  background-color: rgba(11, 51, 230, 0.267);
+  background-color: rgba(0, 0, 0, 0.397);
   border: none;
   outline-color:  rgba(6, 37, 173, 0.438);
   cursor: pointer;
+  animation: appear 0.4s;
+}
+
+@keyframes appear {
+  0% {transform: scale(0);}
+  100% {transform: scale(1);}
 }
 
 .welcomeScreen__button:hover {
-  background-color: rgba(11, 51, 230, 0.568);
+  background-color: rgba(0, 0, 0, 0.568);
   color: rgb(255, 255, 255);
+}
+
+.welcomeScreen__button--hidden {
+  height: 50px;
+  width: 250px;
+  background: transparent;
+  color: transparent;
+  border: none;
+  outline: none;
 }
