--- a/src/App.css
+++ b/src/App.css
@@ -158,3 +158,44 @@ text {
   border: none;
   outline: none;
 }
+
+.mainScreen {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  height: 85%;
+}
+
+.questionsArea {
+  width: 500px;
+  height: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+.questionsArea__question {
+  height: 100px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.questionsArea__answers {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 63%;
+  height: 115px;
+  flex-wrap: wrap;
+}
+
+.questionsArea__answers__item {
+  height: 50px;
+  width: 150px;
+}
