--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,115 @@
   padding: 0;
 }
 
+@media all and (max-width: 359px) {
+  .welcomeScreen__name {
+    transform: scale(0.8);
+  }
+  
+  .button {
+    height: 70px;
+    width: 75%;
+  }
+}
+
+@media all and (min-width: 360px) and (max-width: 479px) {
+  .welcomeScreen__name {
+    transform: scale(0.9);
+  }
+  .button {
+    height: 70px;
+    width: 70%;
+  }
+}
+
+@media all and (min-width: 480px) and (max-width: 1000px) {
+  .welcomeScreen__name {
+    transform: scale(1.2);
+  }
+  
+  .welcome__logo {
+    transform: scale(1.2);
+  }
+
+  .button {
+    height: 70px;
+    width: 60%;
+  }
+
+  .choiceScreen__chooseMenu {
+    max-width: 905px;
+  }
+
+  .choiceScreen__chooseMenu__button {
+    width: 110px;
+  }
+}
+
+@media all and (min-width: 830px) and (max-width: 1000px) {
+
+  .choiceScreen__chooseMenu {
+    max-width: 760px;
+  }
+
+  .choiceScreen__chooseMenu__button {
+    width: 110px;
+  }
+}
+
+@media all and (min-width: 1000px) and (max-width: 1200px) {
+  .welcomeScreen__name {
+    transform: scale(1.5);
+  }
+  
+  .welcome__logo {
+    transform: scale(1.5);
+  }
+
+  .button {
+    height: 70px;
+    width: 400px;
+  }
+
+  .choiceScreen__chooseMenu {
+    max-width: 905px;
+  }
+
+  .choiceScreen__chooseMenu__button {
+    width: 130px;
+  }
+}
+
+@media all and (min-width: 1200px) {
+  .welcomeScreen__name {
+    transform: scale(1.5);
+  }
+  
+  .welcome__logo {
+    transform: scale(1.5);
+  }
+
+  .button {
+    height: 70px;
+    width: 400px;
+  }
+
+  .choiceScreen__chooseMenu {
+    max-width: 1000px;
+
+  }
+
+  .choiceScreen__chooseMenu__button {
+    width: 150px;
+  }
+}
+
+.name {
+  width: 400px;
+}
+
 .App {
-  background-image: url(./images/background.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
+  background-image: url(./images/backgroundNew.jpg);
+  background-repeat: repeat;
   background-size: cover;
   height: 100vh;
   width: 100vw;
@@ -21,30 +126,21 @@
 }
 
 .welcomeScreen {
-  height: 85%;
+  height: 100%;
+  min-width: 320px;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  padding: 5% 0 5% 0;
 }
 
 .screen__name {
   height: 1px;
-  width: 300px;
-  margin-left: -68px;
-}
-
-.welcomeScreen__name {
-  transform: scale(1.5);
-}
-
-.welcome__logo {
-  transform: scale(1.5);
 }
 
 .button {
-  height: 50px;
-  width: 250px;
   font-size: 25px;
   border: none;
   cursor: pointer;
@@ -62,8 +158,8 @@
 }
 
 .choiceScreen {
-  height: 85%;
-  width: 60%;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -109,14 +205,14 @@ text {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 700px;
-  height: 220px;
+  width: 80%;
+  height: 350px;
   flex-wrap: wrap;
 }
 
 .choiceScreen__chooseMenu__button {
   height: 50px;
-  width: 110px;
+  /* width: 150px; */
   background-color: rgba(0, 0, 0, 0.7);
   color: rgb(236, 232, 232);
   border: none;
@@ -168,7 +264,7 @@ text {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  height: 85%;
+  height: 100%;
 }
 
 .questionsArea {
