--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   }
 }
 
-@media all and (min-width: 480px) and (max-width: 1000px) {
+@media all and (min-width: 480px) and (max-width: 830px) {
   .welcomeScreen__name {
     transform: scale(1.2);
   }
@@ -52,7 +52,7 @@
 
   .button {
     height: 70px;
-    width: 60%;
+    width: 350px;
   }
 
   .choiceScreen__chooseMenu {
@@ -80,7 +80,7 @@
 
   .button {
     height: 70px;
-    width: 60%;
+    width: 400px;
   }
 
   .choiceScreen__chooseMenu {
@@ -212,7 +212,7 @@
 }
 
 .screen__name svg {
-  height: 400px;
+  height: 50px;
 }
 
 path {
@@ -278,6 +278,7 @@ text {
 .choiceScreen__button {
   background-color: rgba(0, 0, 0, 0.397);
   outline-color:  rgba(6, 37, 173, 0.438);
+  margin-bottom: 50px;
   animation: appear 0.4s;
 }
 
@@ -313,7 +314,7 @@ text {
 }
 
 .questionsArea {
-  width: 500px;
+  min-width: 90%;
   height: 50%;
   display: flex;
   justify-content: space-around;
@@ -323,7 +324,7 @@ text {
 
 .questionsArea__question {
   height: 150px;
-  width: 80%;
+  width: 95%;
   background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
@@ -337,14 +338,14 @@ text {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 63%;
+  width: 95%;
   height: 115px;
   flex-wrap: wrap;
 }
 
 .questionsArea__answers__item {
   height: 50px;
-  width: 150px;
+  width: 49%;
   background-color: rgba(0, 0, 0, 0.397);
   border: none;
   color: rgb(255, 255, 255);
@@ -359,7 +360,7 @@ text {
 .correct {
   background-color: rgba(0, 128, 0, 0.8);
   height: 50px;
-  width: 150px;
+  width: 49%;
   border: none;
   color: rgb(255, 255, 255);
   cursor: pointer;
@@ -368,13 +369,14 @@ text {
 .incorrect {
   background-color: rgba(128, 128, 128, 0.8);
   height: 50px;
-  width: 150px;
+  width: 49%;
   border: none;
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
 
 .scoreScreen__scoreArea{
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -397,6 +399,7 @@ text {
 .scoreScreen__button {
   background-color: rgba(0, 0, 0, 0.397);
   outline-color:  rgba(6, 37, 173, 0.438);
+  width: 100%;
 }
 
 .scoreScreen__button:hover {
