--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   }
 }
 
-@media all and (min-width: 480px) and (max-width: 830px) {
+@media all and (min-width: 480px) and (max-width: 699px) {
   .welcomeScreen__name {
     transform: scale(1.2);
   }
@@ -72,9 +72,9 @@
     width: 350px;
   }
 
-  .choiceScreen__chooseMenu {
+  /* .choiceScreen__chooseMenu {
     max-width: 905px;
-  }
+  } */
 
   .choiceScreen__chooseMenu__button {
     display: none;
@@ -93,7 +93,7 @@
   }
 }
 
-@media all and (min-width: 830px) and (max-width: 1000px) {
+@media all and (min-width: 700px) and (max-width: 1199px) {
 
   .welcomeScreen__name {
     transform: scale(1.2);
@@ -108,9 +108,9 @@
     width: 400px;
   }
 
-  .choiceScreen__chooseMenu {
+  /* .choiceScreen__chooseMenu {
     max-width: 760px;
-  }
+  } */
 
   .choiceScreen__chooseMenu__button {
     width: 110px;
@@ -129,7 +129,7 @@
   }
 }
 
-@media all and (min-width: 1000px) and (max-width: 1200px) {
+ /* @media all and (min-width: 1000px) and (max-width: 1200px) {
   .welcomeScreen__name {
     transform: scale(1.5);
   }
@@ -141,10 +141,6 @@
   .button {
     height: 70px;
     width: 400px;
-  }
-
-  .choiceScreen__chooseMenu {
-    max-width: 905px;
   }
 
   .choiceScreen__chooseMenu__button {
@@ -162,7 +158,7 @@
   .questionsArea {
     width: 650px;
   }
-}
+} */
 
 @media all and (min-width: 1200px) {
   .welcomeScreen__name {
@@ -179,8 +175,7 @@
   }
 
   .choiceScreen__chooseMenu {
-    max-width: 1000px;
-
+    max-width: 1200px;
   }
 
   .choiceScreen__chooseMenu__button {
@@ -299,14 +294,14 @@ text {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 80%;
+  width: 95%;
   height: 350px;
   flex-wrap: wrap;
 }
 
 .choiceScreen__chooseMenu__button {
   height: 50px;
-  /* width: 150px; */
+  width: 16%;
   background-color: rgba(0, 0, 0, 0.7);
   color: rgb(236, 232, 232);
   border: none;
